UI updates to the splash page.

--- a/Phishious/Views/Shared/_Layout.cshtml
+++ b/Phishious/Views/Shared/_Layout.cshtml
@@ -10,12 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../../assets/images/favicon.svg">
+    <link rel="shortcut icon" href="/favicon.svg">
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
     <!-- CSS Implementing Plugins -->
+    <link rel="stylesheet" href="../../assets/vendor/fontawesome/css/all.min.css">
     <link href="../../assets/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- CSS Front Template -->
