Minor bug fix to the automated scan capability.

--- a/Phishious/Views/Home/Index.cshtml
+++ b/Phishious/Views/Home/Index.cshtml
@@ -91,6 +91,18 @@
             <div>
                 <div class="mb-8">
                     <div class="mb-3 text-center">
+                        <h2>How to run a automated Phishious scan</h2>
+                    </div>
+                    <p>Documentation is underway. Please check the GitHub project regularly for an update.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container" data-aos="fade-up">
+        <div>
+            <div>
+                <div class="mb-8">
+                    <div class="mb-3 text-center">
                         <h2>How to run a manual Phishious scan</h2>
                     </div>
                     <p>A Phishious scan is comprised of <b>four distinct phases</b>. These phases are outlined in detail below:</p>
